syntax = "proto3";
package de.ruoff.consistency.service.friends;

service FriendService {
    rpc SendRequest(FriendRequest) returns (FriendResponse);
    rpc AcceptRequest(FriendRequest) returns (FriendResponse);
    rpc DeclineRequest(FriendRequest) returns (FriendResponse);
    rpc GetFriends(UserIdRequest) returns (FriendListResponse);
    rpc GetPendingRequests(UserIdRequest) returns (PendingRequestListResponse);
    rpc StreamRequests(UserIdRequest) returns (stream FriendRequest);

}

message FriendRequest {
    string fromUsername = 1;
    string toUsername = 2;
}

message UserIdRequest {
    string username = 1;
}

message FriendResponse {
    string message = 1;
}

message FriendListResponse {
    repeated string friends = 1;
}

message PendingRequestListResponse {
    repeated string requests = 1;
}
